Item images added into assets. SideBar and FilterContext have been added. CheckBox and ShowButton have been added.

--- a/src/components/app/style.scss
+++ b/src/components/app/style.scss
@@ -1,3 +1,4 @@
 @import './style/App.scss';
 @import './style/__inner/App__inner.scss';
 @import './style/__sidebar/App__sidebar.scss';
+@import './style/__text-input/App__text-input.scss';
