--- a/src/components/sidebar/style.scss
+++ b/src/components/sidebar/style.scss
@@ -3,3 +3,6 @@
 @import './style/__inner/SideBar__inner.scss';
 @import './style/__rollup/SideBar__rollup.scss';
 @import './style/__checkbox/SideBar__checkbox.scss';
+@import './style/__price-wrapper/SideBar__price-wrapper.scss';
+@import './style/__price-rollup/SideBar__price-rollup.scss';
+@import './style/__show-button/SideBar__show-button.scss';
