CloseButton component have been added. SideBar  have been  completed with close side bar elements and functions

--- a/src/components/ui/buttons/simpleButton/style/SimpleButton.scss
+++ b/src/components/ui/buttons/simpleButton/style/SimpleButton.scss
@@ -1,8 +1,9 @@
 @import '@style/vars/shadows.scss';
 
-.SideBar {
-  width: 250px;
+.SimpleButton {
+  flex-basis: 100%;
   background-color: white;
   border-radius: 4px;
+  border: none;
   box-shadow: $main-block-shadow;
 }
