--- a/src/components/app/style.scss
+++ b/src/components/app/style.scss
@@ -1,4 +1,8 @@
 @import './style/App.scss';
 @import './style/__inner/App__inner.scss';
+@import './style/__inner/media.scss';
 @import './style/__sidebar/App__sidebar.scss';
+@import './style/__sidebar/media.scss';
 @import './style/__text-input/App__text-input.scss';
+@import './style/__filter-button/App__filter-button.scss';
+@import './style/__filter-button/media.scss';
