--- a/src/components/sidebar/style.scss
+++ b/src/components/sidebar/style.scss
@@ -6,3 +6,6 @@
 @import './style/__price-wrapper/SideBar__price-wrapper.scss';
 @import './style/__price-rollup/SideBar__price-rollup.scss';
 @import './style/__show-button/SideBar__show-button.scss';
+@import './style/__show-button/media.scss';
+@import './style/__modal-bg/SideBar__modal-bg.scss';
+@import './style/__close-button/SideBar__close-button.scss';
