--- a/src/components/sidebar/style.scss
+++ b/src/components/sidebar/style.scss
@@ -9,3 +9,9 @@
 @import './style/__show-button/media.scss';
 @import './style/__modal-bg/SideBar__modal-bg.scss';
 @import './style/__close-button/SideBar__close-button.scss';
+
+@import './style/__apply-button/SideBar__apply-button.scss';
+@import './style/__apply-button/_md/SideBar__apply-button_md_active.scss';
+@import './style/__apply-button-text/SideBar__apply-button-text.scss';
+@import './style/_md/SideBar_md_active.scss';
+@import './style/_md/SideBar_md_inactive.scss';
