Types returned from fakeFetch changed. Style for main section added. IProduct types changed.

--- a/src/components/app/style.scss
+++ b/src/components/app/style.scss
@@ -6,3 +6,4 @@
 @import './style/__text-input/App__text-input.scss';
 @import './style/__filter-button/App__filter-button.scss';
 @import './style/__filter-button/media.scss';
+@import './style/__main-section/App__main-section.scss';
