Card components and its style files added.

--- a/src/components/app/style.scss
+++ b/src/components/app/style.scss
@@ -7,3 +7,4 @@
 @import './style/__filter-button/App__filter-button.scss';
 @import './style/__filter-button/media.scss';
 @import './style/__main-section/App__main-section.scss';
+@import './style/__main-section/media.scss';
