Card button font size reduced

--- a/src/components/card/style/__button/Card__button.scss
+++ b/src/components/card/style/__button/Card__button.scss
@@ -6,6 +6,8 @@
   box-shadow: none;
   box-sizing: border-box;
   border: 1px solid grey;
+  line-height: 0.6em;
+  font-size: 0.6em;
   cursor: pointer;
   transition: .2s all ease;
 
