Reducer completed with CHANGE_PRODUCT_NUMBER action. ADD_TO_CART functionality edited. state.cart.products type changed. IteminCart has been added (without styles yet).
Now state.cart.products has TProductInCart type and this type was added.
Changing ADD_TO_CART functionality. Now it receives TProductInCart as well as CHANGE_PRODUCT_NUMBER.
TextInput copleted with TCahangeHandler and TInputFocusEvent types.

--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -1,3 +1,4 @@
 @import './style/Navigation.scss';
 @import './style/__inner/Navigation__inner.scss';
 @import './style/__button-container/Navigation__button-container.scss';
+@import './style/__cart/Navigation__cart.scss';
