--- a/src/components/navigation/style/__inner/Navigation__inner.scss
+++ b/src/components/navigation/style/__inner/Navigation__inner.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   max-width: 1200px;
   
+  position: relative;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
