--- a/src/components/ui/buttons/closeButton/style/CloseButton.scss
+++ b/src/components/ui/buttons/closeButton/style/CloseButton.scss
@@ -4,6 +4,9 @@
   padding: 0;
   width: 30px;
   height: 30px;
+
+  background-color: transparent;
+  border: none;
   
   & svg {
     transform: rotate(45deg) scale(2);
