Cart styles added. Now Logo is a Link.

--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -2,3 +2,4 @@
 @import './style/__inner/Navigation__inner.scss';
 @import './style/__button-container/Navigation__button-container.scss';
 @import './style/__cart/Navigation__cart.scss';
+@import './style/__cart/media.scss';
