--- a/src/components/cart/style.scss
+++ b/src/components/cart/style.scss
@@ -1,1 +1,10 @@
 @import './style/Cart.scss';
+@import './style/__list-item-empty/Cart__list-item-empty.scss';
+@import './style/__empty/Cart__empty.scss';
+@import './style/__empty/media.scss';
+@import './style/__total/Cart__total.scss';
+@import './style/__total/media.scss';
+@import './style/__total-sum/Cart__total-sum.scss';
+@import './style/__item-in-cart/Cart__item-in-cart.scss';
+@import './style/__checkout/Cart__checkout.scss';
+@import './style/__checkout/media.scss';
