FilterButton and SideBar moved to MainRoute.

--- a/src/components/pages/mainPage/style/__sidebar/MainPage__sidebar.scss
+++ b/src/components/pages/mainPage/style/__sidebar/MainPage__sidebar.scss
@@ -1,5 +1,5 @@
-.App__sidebar {
+.MainPage__sidebar {
   position: relative;
-  margin-top: 15px;
+  margin-right: 15px;
   transition: .2s all ease;
 }
