--- a/src/components/sidebar/style.scss
+++ b/src/components/sidebar/style.scss
@@ -15,3 +15,4 @@
 @import './style/__apply-button-text/SideBar__apply-button-text.scss';
 @import './style/_md/SideBar_md_active.scss';
 @import './style/_md/SideBar_md_inactive.scss';
+@import './style/_s/SideBar_s.scss';
