--- a/src/components/pages/mainPage/style/__sidebar/media.scss
+++ b/src/components/pages/mainPage/style/__sidebar/media.scss
@@ -1,15 +1,15 @@
 @media (max-width: 768px) {
-  .App__sidebar {
+  .MainPage__sidebar {
     width: 320px;
     position: absolute;
     z-index: 1001;
     top: 0;
-    right: 0
+    right: -15px;
   }
 }
 
 @media (max-width: 425px) {
-  .App__sidebar {
+  .MainPage__sidebar {
     width: 100%;
   }
 }
