CheckoutForm and Spinner components have been added. fakeFetch now has delay to simulate internet latency. TextInput now has type prop

--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -3,3 +3,5 @@
 @import './style/__button-container/Navigation__button-container.scss';
 @import './style/__cart/Navigation__cart.scss';
 @import './style/__cart/media.scss';
+@import './style/__checkout-button/Navigation__checkout-button.scss';
+@import './style/__checkout-button/media.scss';
