--- a/src/components/ui/buttons/basketButton/style/__item-counter/BasketButton__item-counter.scss
+++ b/src/components/ui/buttons/basketButton/style/__item-counter/BasketButton__item-counter.scss
@@ -9,7 +9,7 @@
   right: -4px;
   
   background-color: red;
-  border-radius: 50%;
+  border-radius: 15px;
 
   color: white;
   line-height: 14px;
